# seraphim

./: .gitignore  README.md  SERAPHIM_REDESIGN_SUMMARY.md  SERAPHIM_REFACTOR_PLAN.md  SERAPHIM_TRADING_SYSTEM_ROADMAP.md  TECHNICAL_ARCHITECTURE.md  docker-compose.yml  market_data_setup.md  pyproject.toml  requirements.txt
bot/: requirements.txt
docs/: data_automation.md  trading_strategies.md
gobackend/: Trading Indicators - Moving Averages - SMA and EMA.xlsx  go.mod  main.go
gobackend/config/: config.go
gobackend/services/: data_service.go  interfaces.go
legacy/gobackend/: Dockerfile  go.sum
legacy/old_bot/: Dockerfile  bot.py
nginx/: Dockerfile  nginx.conf
postgres/: Dockerfile
redis/: Dockerfile  redis.conf
web/: Dockerfile  entrypoint.sh  manage.py  requirements.txt  run_listener.py
web/ads/: forms.py  models.py  urls.py  views.py
web/api/: admin.py  consumers.py  models.py  pycrons.py  tasks.py  urls.py  utils.py  views.py  wsclient.py
web/scripts/: api.txt  bot3.py  calculate_ema_channel.py  calculate_indicators.py  calculate_market_regime.py  fetch_extended_daily_history.py  fetch_full_historical_data.py  fetch_historical_data.py  find_kraken_symbols.py  fix_btc_indicators.py  generate_all_timeframes.py  generate_trading_signals.py  intervals.py  loadcsv1.py  loadcsv2.py  loadcsv3.py  loadcsv4.py  script.txt  syncdata1.py  test_ibkr_data_simple.py  test_ibkr_market_data.py  test_ibkr_socket.py  test_kraken_provider.py
web/seraphim/: asgi.py  celery.py  routing.py  settings.py  urls.py  views.py  wsgi.py
web/sh/: start_uwsgi.sh
(+522 files in other folders)
